--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "build:prod": "ng build --prod --aot=true --buildOptimizer=true",
+    "build:prod": "ng build --prod --aot=true --buildOptimizer=true && echo \"/* /index.html 200\" > ./dist/worst-wishes/_redirects ",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
